common/src/main/java/com/example/common/error/exception/CdException.java
package com.example.common.error.exception;

import com.example.common.error.code.ErrorCode;

public class CdException extends BaseException {
    public CdException(String mea, ErrorCode code) {
        super(mea, code);
    }
}
